--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-3/4">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext.</span> Certification <br><span class="font-light">that goes beyond</span>
+            class="font-light">Genext.</span> Certification that <br><span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
         <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire businness,
@@ -407,8 +407,7 @@
           <span class="font-light">Let's</span> explore, share, and inspire <span class="font-light">together!</span>
         </h2>
         <div class="flex flex-col gap-8">
-          <p class="text-lg font-medium text-neutral-700 dark:text-neutral-dark-300">Ready to dive into the blend of
-            tech, fashion, and lifestyle? Join our vibrant community and be part of the conversation.</p>
+          <p class="text-lg font-medium text-neutral-700 dark:text-neutral-dark-300">Ready to get certified as a next generation business? Join our vibrant community and be part of the conversation.</p>
           <div class="flex flex-col md:flex-row gap-4">
             <a href="page-login.html"
               class="group btn bg-primary-light-950 dark:bg-primary-dark-950 rounded-full px-8 py-4 text-xl text-neutral-950 dark:text-neutral-dark-950 flex gap-2 items-center">
