--- a/landing.html
+++ b/landing.html
@@ -203,6 +203,7 @@
   <footer class="w-full pb-20">
 
     <div class="container px-4">
+        <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
       <!-- <div class="grid grid-cols-1 justify-between items-start md:grid-cols-2 md:gap-4 lg:gap-8 md:justify-items-end md:items-center mb-8 md:mb-12"> -->
       <div class="flex flex-col md:flex-row justify-between md:items-end items-start mb-8 md:mb-20">
         <div class="pl-2 mb-8 md:mb-0 md:pl-0 md:max-w-[50%]">
