--- a/landing.html
+++ b/landing.html
@@ -158,7 +158,7 @@
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-3/4">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext.</span> Certification that <br><span class="font-light"> goes beyond</span>
+            class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
         <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire businness,
