--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
             class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire businness,
-          from your employees to customers and everything in between. We evaluate your social and
-          environmental footprint—from your supply chain and input materials to charitable contributions and employee
-          benefits. Genext Certification ensures your business meets the highest standards of performance, transparency,
-          and accountability.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Genext Certification is
-          tailor-made for SMEs. Affordable for any business. If you operate for profit and have been in business for at
-          least 12 months, you're
-          eligible.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide a
+          comprehensive evaluation of your business, encompassing every aspect from employees to customers. Our detailed
+          assessment examines your social and environmental footprint, including supply chain practices, operational
+          processes, charitable contributions, and marketing strategies.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
+          signifies that your business meets the highest standards of performance, ethics, and innovation. Our
+          certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
+          For-profit organisations that have been operating for at least 12 months are eligible to join the ranks of
+          businesses committed to excellence.</p>
       </div>
       <!-- <div class="grid md:grid-col-2 lg:grid-cols-4 mt-24">
       <div class="flex flex-col">
