--- a/landing.html
+++ b/landing.html
@@ -26,7 +26,7 @@
             class="flex-shrink-0 relative hidden dark:inline-block">
         </a>
       </h1>
-      
+
       <div class="flex justify-end align-middle content-center items-center relative gap-4">
 
 
@@ -111,7 +111,7 @@
                     class="flex-shrink-0 relative hidden dark:inline-block">
                 </a>
               </h1>
-              
+
               <div class="flex flex-wrap flex-col mt-4">
                 <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay Connectted</h4>
                 <p class="text-sm text-neutral-700 font-medium mb-4 leading-5">Imagine waking up to a dose of
@@ -161,14 +161,15 @@
             class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire businness,
-          from your employees to customers and everything in between. We evaluate your social and
-          environmental footprint—from your supply chain and input materials to charitable contributions and employee
-          benefits. Genext Certification ensures your business meets the highest standards of performance, transparency,
-          and accountability.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Genext Certification is
-          tailor-made for SMEs. Affordable for any business. If you operate for profit and have been in business for at least 12 months, you're
-          eligible.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide a
+          comprehensive evaluation of your business, encompassing every aspect from employees to customers. Our detailed
+          assessment examines your social and environmental footprint, including supply chain practices, operational
+          processes, charitable contributions, and marketing strategies.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
+          signifies that your business meets the highest standards of performance, ethics, and innovation. Our
+          certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
+          For-profit organisations that have been operating for at least 12 months are eligible to join the ranks of
+          businesses committed to excellence.</p>
       </div>
       <!-- <div class="grid md:grid-col-2 lg:grid-cols-4 mt-24">
       <div class="flex flex-col">
@@ -203,7 +204,7 @@
   <footer class="w-full pb-20">
 
     <div class="container px-4">
-        <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
+      <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
       <!-- <div class="grid grid-cols-1 justify-between items-start md:grid-cols-2 md:gap-4 lg:gap-8 md:justify-items-end md:items-center mb-8 md:mb-12"> -->
       <div class="flex flex-col md:flex-row justify-between md:items-end items-start mb-8 md:mb-20">
         <div class="pl-2 mb-8 md:mb-0 md:pl-0 md:max-w-[50%]">
