--- a/subscribe.html
+++ b/subscribe.html
@@ -74,11 +74,11 @@
           </div>
         </div> -->
 
-        <!-- <div class="py-4 hover-up xl:flex hidden relative z-20">
+        <div class="py-4 hover-up xl:flex hidden relative z-20">
           <a class="btn-primary" href="page-login.html">
             Sign in
           </a>
-        </div> -->
+        </div>
         <button class="navbar-burger self-center xl:hidden">
           <svg class="fill-neutral-950 dark:fill-neutral-dark-950" id="fi_2976215"
             enable-background="new 0 0 464.205 464.205" height="26" viewBox="0 0 464.205 464.205" width="26"
@@ -142,57 +142,7 @@
     </div>
   </header>
 
-  <!--Hero 1-->
-  <section class="relative py-20 lg:py-24 lg:mb-6">
-    <div class="container px-4">
-      <h1 class="heading-1"><span class="font-light">Welcome to </span>GeNext.</h1>
-
-      <img src="assets/imgs/pages/img-29.webp" alt="" class="mt-12 rounded-3xl">
-    </div>
-  </section>
-
-
-  <section id="about" class="py-16 lg:py-24">
-    <div class="container px-4">
-      <div class="md:w-3/4 lg:w-3/4">
-        <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
-          the ordinary.
-        </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide a
-          comprehensive evaluation of your business, encompassing every aspect from employees to customers. Our detailed
-          assessment examines your social and environmental footprint, including supply chain practices, operational
-          processes, charitable contributions, and marketing strategies.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
-          signifies that your business meets the highest standards of performance, ethics, and innovation. Our
-          certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
-          For-profit organisations that have been operating for at least 12 months are eligible to join the ranks of
-          businesses committed to excellence.</p>
-      </div>
-      <!-- <div class="grid md:grid-col-2 lg:grid-cols-4 mt-24">
-      <div class="flex flex-col">
-        <h6 class="text-2xl font-bold mb-4 text-neutral-900 dark:text-neutral-dark-900">Address</h6>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">4517 Washington Ave. <br>Manchester, Kentucky 39495</p>
-      </div>
-      <div class="flex flex-col">
-        <h6 class="text-2xl font-bold mb-4 text-neutral-900 dark:text-neutral-dark-900">Email</h6>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">sarah-emily@ideko.com</p>
-      </div>
-      <div class="flex flex-col">
-        <h6 class="text-2xl font-bold mb-4 text-neutral-900 dark:text-neutral-dark-900">Phone</h6>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">(239) 555-0108</p>
-      </div>
-      <div class="flex flex-col">
-        <h6 class="text-2xl font-bold mb-4 text-neutral-900 dark:text-neutral-dark-900">Skype</h6>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">sarahemily290</p>
-      </div>
-    </div> -->
-
-    </div>
-
-  </section>
-
-
+  
 
 
 
@@ -212,31 +162,28 @@
           </h3>
         </div>
         <div class="mb-12 md:mb-0">
-          <form class="max-w-full overflow-hidden" action="">
-            <div
-              class="flex flex-col md:flex-row mb-4 md:bg-neutral-0 dark:bg-neutral-dark-200 rounded-full p-1 md:border border-neutral-300 dark:border-neutral-dark-300">
-              <input
-                class="focus:outline-none transition duration-200 py-4 bg-neutral-0 dark:bg-neutral-dark-200 rounded-full pl-6 w-full mb-2 md:mb-0 md:border-0 border border-neutral-300 dark:border-neutral-dark-300 "
-                type="text" placeholder="Email address">
-              <button
-                class="w-full sm:w-auto h-14 py-4 px-6 rounded-full bg-primary-light-950 dark:bg-primary-dark-950 transition duration-200 flex items-center justify-center gap-2"
-                type="submit">
-                <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg"
-                  class="flex-shrink-0 fill-neutral-950" preserveAspectRatio="none">
-                  <path
-                    d="M19.8829 0.671875H2.8827C2.35277 0.673442 1.84497 0.890991 1.47025 1.277C1.09552 1.663 0.884334 2.18609 0.882812 2.73198V15.6118C0.884334 16.1577 1.09552 16.6807 1.47025 17.0668C1.84497 17.4528 2.35277 17.6703 2.8827 17.6719H19.8829C20.4129 17.6703 20.9207 17.4528 21.2954 17.0668C21.6701 16.6807 21.8813 16.1577 21.8828 15.6118V2.73198C21.8813 2.18609 21.6701 1.663 21.2954 1.277C20.9207 0.890991 20.4129 0.673442 19.8829 0.671875ZM19.6326 5.04989L11.3828 10.7158L3.13182 5.04989V2.98979L11.3817 8.65566L19.6315 2.98979L19.6326 5.04989Z">
-                  </path>
-                </svg>
-                <span class="text-neutral-950 font-medium text-2xl">Subscribe</span>
-              </button>
-            </div>
-            <div class="flex items-start justify-start mt-8 pl-4">
-              <input id="checkbox" type="checkbox"
-                class="w-4 h-4 accent-primary-light-950  bg-primary-light-950 text-neutral-0  rounded cursor-pointer">
-              <label for="checkbox" class="text-neutral-700 text-sm ml-2 cursor-pointer">I agree to the <a href="#"
-                  class="text-neutral-950 dark:text-neutral-dark-950 font-bold">Terms & conditions</a></label>
-            </div>
-          </form>
+            <form class="max-w-full overflow-hidden" action="subscribe.php" method="post">
+                <div class="flex flex-col md:flex-row mb-4 md:bg-neutral-0 dark:bg-neutral-dark-200 rounded-full p-1 md:border border-neutral-300 dark:border-neutral-dark-300">
+                    <input
+                        class="focus:outline-none transition duration-200 py-4 bg-neutral-0 dark:bg-neutral-dark-200 rounded-full pl-6 w-full mb-2 md:mb-0 md:border-0 border border-neutral-300 dark:border-neutral-dark-300"
+                        type="email" name="email" placeholder="Email address" required>
+                    <button
+                        class="w-full sm:w-auto h-14 py-4 px-6 rounded-full bg-primary-light-950 dark:bg-primary-dark-950 transition duration-200 flex items-center justify-center gap-2"
+                        type="submit">
+                        <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 fill-neutral-950" preserveAspectRatio="none">
+                            <path
+                                d="M19.8829 0.671875H2.8827C2.35277 0.673442 1.84497 0.890991 1.47025 1.277C1.09552 1.663 0.884334 2.18609 0.882812 2.73198V15.6118C0.884334 16.1577 1.09552 16.6807 1.47025 17.0668C1.84497 17.4528 2.35277 17.6703 2.8827 17.6719H19.8829C20.4129 17.6703 20.9207 17.4528 21.2954 17.0668C21.6701 16.6807 21.8813 16.1577 21.8828 15.6118V2.73198C21.8813 2.18609 21.6701 1.663 21.2954 1.277C20.9207 0.890991 20.4129 0.673442 19.8829 0.671875ZM19.6326 5.04989L11.3828 10.7158L3.13182 5.04989V2.98979L11.3817 8.65566L19.6315 2.98979L19.6326 5.04989Z">
+                            </path>
+                        </svg>
+                        <span class="text-neutral-950 font-medium text-2xl">Subscribe</span>
+                    </button>
+                </div>
+                <div class="flex items-start justify-start mt-8 pl-4">
+                    <input id="checkbox" type="checkbox" name="terms" class="w-4 h-4 accent-primary-light-950 bg-primary-light-950 text-neutral-0 rounded cursor-pointer" required>
+                    <label for="checkbox" class="text-neutral-700 text-sm ml-2 cursor-pointer">I agree to the <a href="#" class="text-neutral-950 dark:text-neutral-dark-950 font-bold">Terms & conditions</a></label>
+                </div>
+            </form>
+        
         </div>
       </div>
     </div>
