--- a/landing.html
+++ b/landing.html
@@ -208,8 +208,9 @@
         <div class="pl-2 mb-8 md:mb-0 md:pl-0 md:max-w-[50%]">
           <h3
             class="text-3xl md:text-4xl lg:text-6xl font-bold text-neutral-950 dark:text-neutral-dark-950 leading-tight">
-            <span class="font-light">Subscribe to The Beanstalk our monthly newsletter for lastest</span> news, stories and tips on giant slaying.
+            Get Inspired? <br><span class="font-light">Subscribe to The Beanstalk our monthly newsletter for lastest</span> news, stories and tips on giant slaying.
           </h3>
+          
         </div>
         <div class="mb-12 md:mb-0">
           <iframe width="540" height="375" src="https://5e106718.sibforms.com/serve/MUIFAL6jMev5LSlRIsfn_rbAiTNs2HzUX92pFz5DbzXmRJXCfcK4i6ZaN8yw915E2zXG5u1vxrLHNiN3IrZVIyy_DT49aIHnEMriRIq2m4jUV4wmNnwWKLHjQ6KzQ_1hpIyu5AS8YLh8A0DofKRXf54glOPH9GqWVelY3skpr66QzzVYf0UhWXSyZoYxHqfhcyo1dhue_aV8yRQl" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe> </div>
