--- a/index.html
+++ b/index.html
@@ -175,10 +175,8 @@
             class="font-light">Genext.</span> Certification that<span class="font-light"> goes beyond</span>
           the ordinary.
         </h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide a
-          comprehensive evaluation of your business, encompassing every aspect from employees to customers. Our detailed
-          assessment examines your social and environmental footprint, including supply chain practices, operational
-          processes, charitable contributions, and marketing strategies.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">At Genext, we provide an
+          evaluation of your business, encompassing every aspect from employees to customers and you community. </p>
         <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Achieving Genext Certification
           signifies that your business meets the highest standards of performance, ethics, and innovation. Our
           certification process, tailored specifically for SMEs, is designed to be both affordable and accessible.
@@ -244,38 +242,43 @@
               <div class="justify-start items-center gap-5 inline-flex">
                 <a href="category.html"
                   class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
-                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Latest
+                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">
+                    Latest
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
                   <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
-                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">James Murphy</a> - July 4, 2024</div>
+                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">
+                    <a href="author.html">James Murphy</a> - April, 2025
+                  </div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">Supporting Local Business, Supporting Your Community</a></h3>
+                  href="single.html">This Earth day, Genext Launches</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="single.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/method.webp" />
+              <img src="assets/imgs/pages/img-06.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
                 <a href="category.html"
                   class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
-                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending
+                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">
+                    Latest
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
-                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
-                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">James Murphy</a> - July 4, 2024</div>
+                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-02.webp" /></a>
+                  <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700">
+                    <a href="author.html">Dr Debashish Sengupta</a> - April 4, 2025
+                  </div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">The Genext Methodology</a></h3>
+                  href="single.html">Building Consumer Trust: How UK Small Businesses Can Thrive in
+                  2025</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
@@ -365,19 +368,21 @@
 
               <div
                 class="w-12 h-12 rounded-[5px] flex justify-center items-center border border-neutral-300 dark:border-neutral-dark-300 cursor-pointer hover-up hover:bg-primary-light-200">
-                <img src="assets/imgs/social/yt.svg"></div>
+                <img src="assets/imgs/social/yt.svg">
+              </div>
 
               <div
                 class="w-12 h-12 rounded-[5px] flex justify-center items-center border border-neutral-300 dark:border-neutral-dark-300 cursor-pointer hover-up hover:bg-primary-light-200">
-                <img src="assets/imgs/social/li.svg"></div>
+                <img src="assets/imgs/social/li.svg">
+              </div>
             </div>
           </div>
           <!-- Featured box -->
 
           <!-- Banner box -->
           <div class="flex flex-col gap-4">
-            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Launching <span
-                class="font-light">September 2024</span></h4>
+            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Accepting <span
+                class="font-light">Applications Soon</span></h4>
             <div class="w-72 h-96 relative rounded-2xl">
               <img class="w-72 h-96 left-0 top-0 absolute rounded-2xl" src="assets/imgs/pages/banner1.png" />
               <div
@@ -598,7 +603,7 @@
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
 
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2024. Designed by <a
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a
             target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a>
         </p>
       </div>
