--- a/category.html
+++ b/category.html
@@ -32,7 +32,7 @@
         <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
         <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
         <li class="group">
-          <a href="#" class="menu-item group-hover:border-white">News & Stories</a>
+          <a href="blog.html" class="menu-item group-hover:border-white">News & Stories</a>
           <!-- MEGA MENU CONTENT -->
           <div class="w-full px-12 py-12 rounded-2xl bg-neutral-0 dark:bg-neutral-dark-0 shadow-sm absolute top-full left-0 mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
             <h3 class="text-5xl mb-8 text-neutral-950 dark:text-neutral-dark-950">Featured <span class="font-bold">Posts</span></h3>
