--- a/index_full.html
+++ b/index_full.html
@@ -33,7 +33,7 @@
         <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
         <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
         <li class="group">
-          <a href="#" class="menu-item group-hover:border-white">News & Stories</a>
+          <a href="blog.html" class="menu-item group-hover:border-white">News & Stories</a>
           <!-- MEGA MENU CONTENT -->
           <div class="w-full px-12 py-12 rounded-2xl bg-neutral-0 dark:bg-neutral-dark-0 shadow-sm absolute top-full left-0 mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
             <h3 class="text-5xl mb-8 text-neutral-950 dark:text-neutral-dark-950">Featured <span class="font-bold">Posts</span></h3>
@@ -269,9 +269,9 @@
         <div class="swiper-wrapper pt-4">
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-01.png" /></a>
+              <div><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-01.png" /></a>
               <div class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html" class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Healthy</a>
+                <div class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Healthy</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
                   <div class="left-[3px] top-[5px] absolute text-center text-neutral-950 text-xs font-medium  leading-3">17</div>
@@ -281,9 +281,9 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-02.png" /></a>
+              <div><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-02.png" /></a>
               <div class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html" class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Trending</a>
+                <div class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Trending</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
                   <div class="left-[3px] top-[5px] absolute text-center text-neutral-950 text-xs font-medium  leading-3">32</div>
@@ -293,9 +293,9 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-03.png" /></a>
+              <div><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-03.png" /></a>
               <div class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html" class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Fashion</a>
+                <div class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Fashion</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
                   <div class="left-[3px] top-[5px] absolute text-center text-neutral-950 text-xs font-medium  leading-3">48</div>
@@ -305,9 +305,9 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-04.png" /></a>
+              <div><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-04.png" /></a>
               <div class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html" class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Technology</a>
+                <div class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Technology</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
                   <div class="left-[3px] top-[5px] absolute text-center text-neutral-950 text-xs font-medium  leading-3">15</div>
@@ -317,9 +317,9 @@
           </div>
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
-              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-05.png" /></a>
+              <div><img class="left-0 top-0 absolute rounded-3xl" src="assets/imgs/pages/img-05.png" /></a>
               <div class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
-                <a href="category.html" class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Travel</a>
+                <div class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Travel</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
                   <div class="left-[3px] top-[5px] absolute text-center text-neutral-950 text-xs font-medium  leading-3">24</div>
@@ -359,7 +359,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -376,7 +376,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Science</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -393,7 +393,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Travel</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -410,7 +410,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Fashion</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -427,7 +427,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -444,7 +444,7 @@
           </a>
           <div class="flex-col justify-start items-start gap-3.5 flex">
             <div class="justify-start items-center gap-5 inline-flex">
-              <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+              <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                 <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Business</div>
               </a>
               <div class="justify-start items-center gap-2 flex">
@@ -491,7 +491,7 @@
                 </a>
                 <div class="flex-col gap-4 inline-flex items-center md:items-start">
                   <div class="justify-start items-center gap-5 inline-flex">
-                    <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                    <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                       <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Business</div>
                     </a>
                     <div class="justify-start items-center gap-2 flex">
@@ -511,7 +511,7 @@
                 </a>
                 <div class="flex-col gap-4 inline-flex items-center md:items-start">
                   <div class="justify-start items-center gap-5 inline-flex">
-                    <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                    <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                       <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Environment</div>
                     </a>
                     <div class="justify-start items-center gap-2 flex">
@@ -531,7 +531,7 @@
                 </a>
                 <div class="flex-col gap-4 inline-flex items-center md:items-start">
                   <div class="justify-start items-center gap-5 inline-flex">
-                    <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                    <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                       <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Sports</div>
                     </a>
                     <div class="justify-start items-center gap-2 flex">
@@ -551,7 +551,7 @@
                 </a>
                 <div class="flex-col gap-4 inline-flex items-center md:items-start">
                   <div class="justify-start items-center gap-5 inline-flex">
-                    <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                    <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                       <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Fashion</div>
                     </a>
                     <div class="justify-start items-center gap-2 flex">
@@ -587,7 +587,7 @@
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
-                <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                   <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending</div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
@@ -632,7 +632,7 @@
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
-                <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                   <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending</div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
@@ -677,7 +677,7 @@
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
-                <a href="category.html" class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
+                <div class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
                   <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending</div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
@@ -784,7 +784,7 @@
             <h6 class="text-base font-bold text-neutral-700 dark:text-neutral-dark-700 mb-2">Category</h6>
             <ul>
               <li class="footer-menu">
-                <a href="category.html" class="text-base font-regular text-neutral-950 dark:text-neutral-dark-950">Trending</a>
+                <div class="text-base font-regular text-neutral-950 dark:text-neutral-dark-950">Trending</a>
               </li>
               <li class="footer-menu">
                 <a href="category-2.html" class="text-base font-regular text-neutral-950 dark:text-neutral-dark-950">Fashion</a>
@@ -834,7 +834,7 @@
         </div>
       </div>
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2024. Designed by <a target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a></p>
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2025. Designed by <a target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a></p>
       </div>
     </div>
   </footer>
